# nxprdlib

./: Makefile  Makefile.am  Readme.txt
comps/phCidManager/src/: phCidManager.c
comps/phCidManager/src/Sw/: phCidManager_Sw.c  phCidManager_Sw.h
comps/phKeyStore/src/: phKeyStore.c  phKeyStore_Int.h
comps/phKeyStore/src/Rc663/: phKeyStore_Rc663.c  phKeyStore_Rc663.h  phKeyStore_Rc663_Int.h
comps/phKeyStore/src/Sw/: phKeyStore_Sw.c  phKeyStore_Sw.h  phKeyStore_Sw_Int.h
comps/phLog/src/: phLog.c  phLog_Int.h
comps/phOsal/src/: phOsal.c  phOsal_GLib.c
comps/phOsal/src/Stub/: phOsal_Stub.txt
comps/phTools/src/: phTools.c
comps/phacDiscLoop/src/: phacDiscLoop.c
comps/phacDiscLoop/src/Sw/: phacDiscLoop_Sw.c  phacDiscLoop_Sw.h  phacDiscLoop_Sw_Int.c  phacDiscLoop_Sw_Int.h
comps/phalFelica/src/: phalFelica.c  phalFelica_Int.h
comps/phalFelica/src/Sw/: phalFelica_Sw.c  phalFelica_Sw.h
comps/phalMfc/src/: phalMfc.c  phalMfc_Int.c  phalMfc_Int.h
comps/phalMfc/src/Sw/: phalMfc_Sw.c  phalMfc_Sw.h
comps/phalMfdf/src/: phalMfdf.c  phalMfdf_Int.c  phalMfdf_Int.h
comps/phalMfdf/src/Sw/: phalMfdf_Sw.c  phalMfdf_Sw.h  phalMfdf_Sw_Int.c  phalMfdf_Sw_Int.h
comps/phalMful/src/: phalMful.c  phalMful_Int.c  phalMful_Int.h
comps/phalMful/src/Sw/: phalMful_Sw.c  phalMful_Sw.h
comps/phalT1T/src/: phalT1T.c
comps/phalT1T/src/Sw/: phalT1T_Sw.c  phalT1T_Sw.h
comps/phalTop/src/: phalTop.c
comps/phalTop/src/Sw/: phalTop_Sw.c  phalTop_Sw.h  phalTop_Sw_Int_T1T.c  phalTop_Sw_Int_T1T.h  phalTop_Sw_Int_T2T.c  phalTop_Sw_Int_T2T.h  phalTop_Sw_Int_T3T.c  phalTop_Sw_Int_T3T.h  phalTop_Sw_Int_T4T.c  phalTop_Sw_Int_T4T.h
comps/phbalReg/src/: phBalReg_RpiSpi.c  phbalReg.c
comps/phbalReg/src/Stub/: phbalReg_Stub.h  phbalReg_Stub.txt
comps/phhalHw/src/: phhalHw.c
comps/phhalHw/src/Callback/: phhalHw_Callback.c  phhalHw_Callback.h
comps/phhalHw/src/Rc523/: phhalHw_Rc523.c  phhalHw_Rc523.h  phhalHw_Rc523_Cmd.c  phhalHw_Rc523_Config.h  phhalHw_Rc523_Int.c  phhalHw_Rc523_Int.h  phhalHw_Rc523_Wait.c
comps/phhalHw/src/Rc663/: phhalHw_Rc663.c  phhalHw_Rc663.h  phhalHw_Rc663_Cmd.c  phhalHw_Rc663_Config.h  phhalHw_Rc663_Int.c  phhalHw_Rc663_Int.h  phhalHw_Rc663_Wait.c
comps/phlnLlcp/src/: phlnLlcp.c
comps/phlnLlcp/src/Fri/: phlnLlcp_Fri_Llcp.c  phlnLlcp_Fri_Llcp.h  phlnLlcp_Fri_Mac.c  phlnLlcp_Fri_Mac.h  phlnLlcp_Fri_MacNfcip.c  phlnLlcp_Fri_MacNfcip.h  phlnLlcp_Fri_OvrHal.c  phlnLlcp_Fri_OvrHal.h  phlnLlcp_Fri_Transport.c  phlnLlcp_Fri_Transport.h  phlnLlcp_Fri_Transport_Connection.c  phlnLlcp_Fri_Transport_Connection.h  phlnLlcp_Fri_Transport_Connectionless.c  (+3 more)
comps/phnpSnep/src/: phnpSnep.c
comps/phpalFelica/src/: phpalFelica.c
comps/phpalI14443p3a/src/: phpalI14443p3a.c
comps/phpalI14443p3b/src/: phpalI14443p3b.c
comps/phpalI14443p4/src/: phpalI14443p4.c
comps/phpalI14443p4a/src/: phpalI14443p4a.c
comps/phpalI18092mPI/src/: phpalI18092mPI.c
comps/phpalI18092mT/src/: phpalI18092mT.c
comps/phpalMifare/src/: phpalMifare.c  phpalMifare_Int.h
docs/14_user_doc/: NXP Reader Library.chm
intfs/: phCidManager.h  phKeyStore.h  phLog.h  phOsal.h  phOsal_GLib.h  phOsal_GLib_Int.h  phOsal_Stub.h  phTools.h  phacDiscLoop.h  phalFelica.h  phalMfc.h  phalMfdf.h  phalMfdfEv2.h  phalMful.h  phalT1T.h  phalTop.h  phbalReg.h  phbalReg_RpiSpi.h  phhalHw.h  phhalHw_Rc523_Cmd.h  phhalHw_Rc523_Reg.h  phhalHw_Rc663_Cmd.h  phhalHw_Rc663_Reg.h  phlnLlcp.h  phnpSnep.h  phpalFelica.h  phpalI14443p3a.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI14443p4a.h  phpalI18092mPI.h  phpalI18092mT.h  phpalMifare.h
types/: ph_NxpBuild.h  ph_RefDefs.h  ph_Status.h  ph_TypeDefs.h
(+31 files in other folders)
