noinst_LIBRARIES = libnxprdlib.a
AM_CXXFLAGS = 
AM_CPPFLAGS = -I./intfs/ -I./types/  -g3 -O0
AM_CFLAGS = -Wall -std=c99 $(GLIB_CFLAGS) $(WIRINGPI_CFLAGS)
AM_LIBS=  $(GLIB_LIBS) 
AM_LDFLAGS =

libnxprdlib_a_SOURCES = ./comps/phacDiscLoop/src/phacDiscLoop.c \
./comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw.c \
./comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int.c \
./comps/phalFelica/src/phalFelica.c \
./comps/phalFelica/src/Sw/phalFelica_Sw.c \
./comps/phalMfc/src/phalMfc.c \
./comps/phalMfc/src/phalMfc_Int.c \
./comps/phalMfc/src/Sw/phalMfc_Sw.c \
./comps/phalMfdf/src/phalMfdf.c \
./comps/phalMfdf/src/phalMfdf_Int.c \
./comps/phalMfdf/src/Sw/phalMfdf_Sw.c \
./comps/phalMfdf/src/Sw/phalMfdf_Sw_Int.c \
./comps/phalMful/src/phalMful.c \
./comps/phalMful/src/phalMful_Int.c \
./comps/phalMful/src/Sw/phalMful_Sw.c \
./comps/phalT1T/src/phalT1T.c \
./comps/phalT1T/src/Sw/phalT1T_Sw.c \
./comps/phalTop/src/phalTop.c \
./comps/phalTop/src/Sw/phalTop_Sw.c \
./comps/phalTop/src/Sw/phalTop_Sw_Int_T1T.c \
./comps/phalTop/src/Sw/phalTop_Sw_Int_T2T.c \
./comps/phalTop/src/Sw/phalTop_Sw_Int_T3T.c \
./comps/phalTop/src/Sw/phalTop_Sw_Int_T4T.c \
./comps/phbalReg/src/phbalReg.c \
./comps/phCidManager/src/phCidManager.c \
./comps/phCidManager/src/Sw/phCidManager_Sw.c \
./comps/phhalHw/src/Callback/phhalHw_Callback.c \
./comps/phhalHw/src/phhalHw.c \
./comps/phhalHw/src/Rc523/phhalHw_Rc523.c \
./comps/phhalHw/src/Rc523/phhalHw_Rc523_Cmd.c \
./comps/phhalHw/src/Rc523/phhalHw_Rc523_Int.c \
./comps/phhalHw/src/Rc523/phhalHw_Rc523_Wait.c \
./comps/phhalHw/src/Rc663/phhalHw_Rc663.c \
./comps/phhalHw/src/Rc663/phhalHw_Rc663_Cmd.c \
./comps/phhalHw/src/Rc663/phhalHw_Rc663_Int.c \
./comps/phhalHw/src/Rc663/phhalHw_Rc663_Wait.c \
./comps/phKeyStore/src/phKeyStore.c \
./comps/phKeyStore/src/Rc663/phKeyStore_Rc663.c \
./comps/phKeyStore/src/Sw/phKeyStore_Sw.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_Llcp.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_Mac.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_MacNfcip.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_OvrHal.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_Transport.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_Transport_Connection.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_Transport_Connectionless.c \
./comps/phlnLlcp/src/Fri/phlnLlcp_Fri_Utils.c \
./comps/phlnLlcp/src/phlnLlcp.c \
./comps/phLog/src/phLog.c \
./comps/phnpSnep/src/Fri/phnpSnep_Fri.c \
./comps/phnpSnep/src/Fri/phnpSnep_Fri_ContextMgmt.c \
./comps/phnpSnep/src/Fri/phnpSnep_Fri_Utils.c \
./comps/phnpSnep/src/phnpSnep.c \
./comps/phOsal/src/phOsal.c \
./comps/phpalFelica/src/phpalFelica.c \
./comps/phpalFelica/src/Sw/phpalFelica_Sw.c \
./comps/phpalI14443p3a/src/phpalI14443p3a.c \
./comps/phpalI14443p3a/src/Sw/phpalI14443p3a_Sw.c \
./comps/phpalI14443p3b/src/phpalI14443p3b.c \
./comps/phpalI14443p3b/src/Sw/phpalI14443p3b_Sw.c \
./comps/phpalI14443p4/src/phpalI14443p4.c \
./comps/phpalI14443p4/src/Sw/phpalI14443p4_Sw.c \
./comps/phpalI14443p4a/src/phpalI14443p4a.c \
./comps/phpalI14443p4a/src/Sw/phpalI14443p4a_Sw.c \
./comps/phpalI18092mPI/src/phpalI18092mPI.c \
./comps/phpalI18092mPI/src/Sw/phpalI18092mPI_Sw.c \
./comps/phpalI18092mPI/src/Sw/phpalI18092mPI_Sw_Int.c \
./comps/phpalI18092mT/src/phpalI18092mT.c \
./comps/phpalI18092mT/src/Sw/phpalI18092mT_Sw.c \
./comps/phpalI18092mT/src/Sw/phpalI18092mT_Sw_Int.c \
./comps/phpalMifare/src/phpalMifare.c \
./comps/phpalMifare/src/Sw/phpalMifare_Sw.c \
./comps/phTools/src/phTools.c \
./comps/phOsal/src/phOsal_GLib.c \
./comps/phbalReg/src/phBalReg_RpiSpi.c 